# falkordb_sync_tool

./: .gitignore  README.md  pyproject.toml
falkordb_sync_tool/: __init__.py  falkordb_sync_tool.py
