[tool.poetry]
name = "falkordb_sync_tool"
version = "0.1.0"
description = ""
authors = ["Dudi Zimberknopf <zimber.dudi@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
falkordb = "^1.0.9"
redis = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
falkordb_sync_tool = "falkordb_sync_tool:main"